Remove checked exception